Adding RPiBroker to project list

--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -33,7 +33,7 @@
             <div role="tabpanel" class="tab-pane active" class="projectInfo">
 
             </div>
-            <div role="tabpanel" class="tab-pane fade hardware" id="">
+            <div role="tabpanel" class="tab-pane fade" id="hardware">
 
             </div>
             <div role="tabpanel" class="tab-pane fade" id="software">
