--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -8,8 +8,9 @@
     
   </style>
   
-  <div class="container" id="tracker">
-    <div style="border: 2px solid #c7053d;  border-radius: 25px; padding: 10px;">
+  <div class="container" id="projectContainer">
+    
+    <div style="border: 2px solid #c7053d;  border-radius: 25px; padding: 10px;" id="scaffolding">
       <div class="row" style="">
         <div class="col-sm-4" style="border-right: 1px solid #c7053d;">
           <img src="/images/rpi-tracker.jpg" class="img-responsive center-block projImg" />
@@ -48,6 +49,10 @@
       </div>
     </div>
     
+  </div>
+  
+  
+  <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
         <!-- <h2><a href="/projectapplication">Add Your Own Project!</a></h2> -->
@@ -61,57 +66,7 @@
   
   <br>
   
-  <div class="container" id="broker">
-    <div style="border: 2px solid #c7053d;  border-radius: 25px; padding: 10px;">
-      <div class="row" style="">
-        <div class="col-sm-4" style="border-right: 1px solid #c7053d;">
-          <img src="/images/proj-img.jpg" class="img-responsive center-block projImg" />
-        </div>
-        <div class="col-sm-8 projSummary"  style="border-left: 1px solid #c7053d;"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-12" style="">
-
-          <!-- Nav tabs -->
-          <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#projectInfo" role="tab" data-toggle="tab">Project Summary</a></li>
-            <li role="presentation"><a href="#hardware" role="tab" data-toggle="tab">Hardware</a></li>
-            <li role="presentation"><a href="#software" role="tab" data-toggle="tab">Software</a></li>
-            <li role="presentation"><a href="#faq" role="tab" data-toggle="tab">FAQ</a></li>
-          </ul>
-
-          <!-- Tab panes -->
-          <div class="tab-content" style="min-height: 150px; background-color: #f7f7f9;">
-            <div role="tabpanel" class="tab-pane active" id="projectInfo">
-
-            </div>
-            <div role="tabpanel" class="tab-pane fade" id="hardware">
-
-            </div>
-            <div role="tabpanel" class="tab-pane fade" id="software">
-
-            </div>
-            <div role="tabpanel" class="tab-pane fade" id="faq">
-
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <!-- <h2><a href="/projectapplication">Add Your Own Project!</a></h2> -->
-        <br>
-        <a role="button" class="btn btn-lg btn-primary" href="/projectapplication">Add Your Own Project!</a>
-        <br>
-      </div>
-    </div>
-    
-  </div>
-  <br>
+  
   
   <script type="text/javascript">
     $(document).ready(function() {
@@ -125,35 +80,41 @@
         if(projectInfo.length == 0)
           return;
         
+        //Get a handle on the scaffolding element.
+        var scaffold = $('#scaffolding');
+        
         for(var i=0; i < projectInfo.length; i++) {
           
-          //Get a handle on the container.
-          var container;
-          if(projectInfo[i].slug == 'rpi-tracker')
-            container = $('#tracker');
-          else if(projectInfo[i].slug == 'rpi-broker')
-            container = $('#broker');
+          //Clone the scaffolding element.
+          var thisProj = scaffold.clone();
           
           //Fill in the content from the data retrieved from the server.
           var projBtn = '<a class="btn btn-primary center-text" href="/project/'
           +projectInfo[i].slug+'">View Project Page</a><br><br>';
-          container.find('.projSummary').append('<h1>'+projectInfo[i].title+'</h1>'+projBtn);
-          container.find('.projSummary').append(projectInfo[i].basicInfo);
+          thisProj.find('.projSummary').append('<h1>'+projectInfo[i].title+'</h1>'+projBtn);
+          thisProj.find('.projSummary').append(projectInfo[i].basicInfo);
 
 
-          container.find('#projectInfo').append(projectInfo[i].summary);
-          container.find('#hardware').append(projectInfo[i].hardware);
-          container.find('#software').append(projectInfo[i].software);
+          thisProj.find('#projectInfo').append(projectInfo[i].summary);
+          thisProj.find('#hardware').append(projectInfo[i].hardware);
+          thisProj.find('#software').append(projectInfo[i].software);
 
-          $('#faq').append('<br>');
+          thisProj.find('#faq').append('<br>');
 
           //Fill out the FAQ section.
-          for(var i=0; i < projectInfo[0].faqTitle.length; i++) {
-            $('#faq').append('<h3>'+projectInfo[0].faqTitle[i]+'</h3>');
-            $('#faq').append(projectInfo[0].faqBody[i]);
-            $('#faq').append('<br>');
+          for(var j=0; j < projectInfo[i].faqTitle.length; j++) {
+            thisProj.find('#faq').append('<h3>'+projectInfo[i].faqTitle[j]+'</h3>');
+            thisProj.find('#faq').append(projectInfo[i].faqBody[j]);
+            thisProj.find('#faq').append('<br>');
           }
+          
+          //Add the project to the DOM
+          $('#projectContainer').append(thisProj);
+          
         }
+        
+        //Hide the scaffolding element before leaving.
+        scaffold.hide();
         
         //Activate the tabs to get content to show
         //$('.nav-tabs').find('a').last().tab('show');
