Adding RPiBroker to project list

--- a/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/browseprojects.hbs
@@ -24,23 +24,23 @@
           <!-- Nav tabs -->
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#projectInfo" role="tab" data-toggle="tab">Project Summary</a></li>
-            <li role="presentation"><a href=".hardware" role="tab" data-toggle="tab">Hardware</a></li>
+            <li role="presentation"><a href="" role="tab" data-toggle="tab" class="hardware">Hardware</a></li>
             <li role="presentation"><a href="#software" role="tab" data-toggle="tab">Software</a></li>
             <li role="presentation"><a href="#faq" role="tab" data-toggle="tab">FAQ</a></li>
           </ul>
 
           <!-- Tab panes -->
           <div class="tab-content" style="min-height: 150px; background-color: #f7f7f9;">
-            <div role="tabpanel" class="tab-pane active" class="projectInfo">
+            <div role="tabpanel" class="tab-pane active projectInfo" class="projectInfo">
 
             </div>
-            <div role="tabpanel" class="tab-pane fade" id="hardware">
+            <div role="tabpanel" class="tab-pane fade hardware" id="hardware">
 
             </div>
-            <div role="tabpanel" class="tab-pane fade" id="software">
+            <div role="tabpanel" class="tab-pane fade software" id="software">
 
             </div>
-            <div role="tabpanel" class="tab-pane fade" id="faq">
+            <div role="tabpanel" class="tab-pane fade faq" id="faq">
 
             </div>
           </div>
