--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -103,14 +103,16 @@
           //Send a confirmation email
           
           var emailData = new Object();
-          emailData.email = data.user.email; 
+          emailData.email = data.user.email+',chris.troutner@gmail.com'; 
           emailData.from = 'chris.troutner@gmail.com';
           emailData.subject = "Your RPiOVN.org Account";
           emailData.html = true;
           emailData.body = "<!DOCTYPE html><html lang='en'><body>"+
-            "Thank you for signing up as a Beta Tester on RPiOVN.org\n\n"+
-            "Your login is your email: "+emailData.email+"\n"+
-            "<a href='http://rpiovn.org/keystone/signin'>You can sign in here</a>"+
+            "Thank you for signing up as a Beta Tester on RPiOVN.org<br><br>"+
+            "Your login is your email: "+emailData.email+"<br>"+
+            "<a href='http://rpiovn.org/keystone/signin'>You can sign in here</a><br>"+
+            "After logging in, you'll be able to access <a href='http://rpiovn.org/dashboard'>the time logging dashboard</a> to start logging time to projects.<br>"
+            "Be sure to introduce yourself and ask questions <a href='https://www.loomio.org/g/2vWqlYVF/rpiovn'>on our Loomio group</a>."
             "</body></html>";
           
           $.get('/api/email/send', emailData, function(data) {
