Improving email sent on new signup

--- a/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/createaccount.hbs
@@ -109,9 +109,9 @@
           emailData.html = true;
           emailData.body = "<!DOCTYPE html><html lang='en'><body>"+
             "Thank you for signing up as a Beta Tester on RPiOVN.org<br><br>"+
-            "Your login is your email: "+emailData.email+"<br>"+
-            "<a href='http://rpiovn.org/keystone/signin'>You can sign in here</a><br>"+
-            "After logging in, you'll be able to access <a href='http://rpiovn.org/dashboard'>the time logging dashboard</a> to start logging time to projects.<br>"
+            "Your login is your email: "+data.user.email+"<br><br>"+
+            "<a href='http://rpiovn.org/keystone/signin'>You can sign in here</a><br><br>"+
+            "After logging in, you'll be able to access <a href='http://rpiovn.org/dashboard'>the time logging dashboard</a> to start logging time to projects.<br><br>"
             "Be sure to introduce yourself and ask questions <a href='https://www.loomio.org/g/2vWqlYVF/rpiovn'>on our Loomio group</a>."
             "</body></html>";
           
