--- a/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/layouts/default.hbs
@@ -248,6 +248,7 @@
               <li><a href='/page/how-it-works'>About</a></li>
               <li><a href='/contactus'>Contact Us</a></li>
               <li><a href='/blog'>Blog</a></li>
+              <li><a href="http://fb.me/RPiOVN" target="_blank">Facebook</a></li>
               <!--
               <li><a href='#/'>Twitter</a></li>
               <li><a href='#/'>Facebook</a></li>
@@ -288,6 +289,17 @@
       $(document).ready(function() {
         $('#loader-wrapper').hide();
       });
+    </script>
+    
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-102599891-1', 'auto');
+      ga('send', 'pageview');
     </script>
     
 	</body>
