--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -85,33 +85,34 @@
       });
       
       //Get work log info
-      $.get('/api/logwork/list/last50', '', function(data) {
+      var page = 1;
+      var obj = {};
+      var obj.page = page;
+      
+      var workPromise = getWork(obj);
+      workPromise.then(function(results) {
         debugger;
-        
-        
+      }, function(err) {
+        debugger;
       });
+      
+      
       
     });
     
-    /*
-    var imgUrls = '{{{data.project.imgUrls}}}';
-    var faqTitle = "{{{data.project.faqTitle}}}";
-    var faqBody = '{{{data.project.faqBody}}}';
-    
-    faqTitle = faqTitle.split(',');
-    faqBody = faqBody.split(',');
-    
-    
-    if(faqTitle.length > 0) {
-      $('#faqSection').prop('hidden', false)
+    function getWork(obj) {
+      var promise = new Promise(function(resolve, reject) {
+        
+        $.get('/api/logwork/list/last50', obj, function(data) {
+          debugger;
+        
+          resolve(data.loggedwork);
+        });
+        
+      });
       
-      for(var i=0; i < faqTitle.length; i++) {
-        $('#faqContent').append('<h3>'+faqTitle[i]+'</h3>');
-        $('#faqContent').append(faqBody[i]);
-        $('#faqContent').append('<br>');
-      }
+      return promise;
     }
-    */
     
   </script>
 </div>
