--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -87,12 +87,17 @@
       //Get work log info
       var page = 1;
       
+      //Retrieve the first page of results from the server.
       var obj = {};
       obj.page = page;
-      
       var workPromise = getWork(obj);
-      workPromise.then(function(results) {
+      workPromise.then(function(work) {
         debugger;
+        
+        for(var i=0; i < work.results.length; i++) {
+          
+        }
+        
       }, function(err) {
         debugger;
       });
@@ -114,6 +119,8 @@
       
       return promise;
     }
+    
+    var globalData = {{{JSON data}}};
     
   </script>
 </div>
