--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -56,6 +56,8 @@
 	</div>
   
   <script type="text/javascript">
+    var projectData = {{{JSON data.project}}};
+    
     $(document).ready(function() {
       
       //Get project FAQ info
@@ -120,7 +122,7 @@
       return promise;
     }
     
-    var globalData = {{{JSON data}}};
+    
     
   </script>
 </div>
