Adding work logs to the project pages

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -48,7 +48,7 @@
 	</div> 
   
   <div class="row">
-   	<div class="col-md-12" id="faqSection" hidden>
+   	<div class="col-md-12" id="faqSection">
       <br>
       <h2>Latest Work Entries</h2>
       <div id="workLogs"></div>
