Adding work logs to the project pages

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -5,6 +5,9 @@
       color: #594a42;
     }
     
+    table, th, td {
+      border: 1px solid black;
+    }
   </style>
 
 <div class="container">  
