Adding work logs to the project pages

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -5,9 +5,11 @@
       color: #594a42;
     }
     
+    /*
     table, th, td {
       border: 1px solid black;
     }
+    */
   </style>
 
 <div class="container">  
@@ -55,7 +57,7 @@
       <br>
       <h2>Latest Work Entries</h2>
       <div id="workLogs">
-        <table id="workTable">
+        <table id="workTable" class="table table-striped table-bordered table-hover">
           <tr>
             <th>Date</th>
             <th>User</th>
