Adding work logs to the project pages

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -207,7 +207,7 @@
               var userName = work.results[i].user;
               for(var k=0; k < userData.length; k++) {
                 if(work.results[i].user == userData[k]._id) {
-                  userName = userData[k].firstName+' '+userData[k].lastName;
+                  userName = userData[k].name.first+' '+userData[k].name.last;
                   break;
                 }
               }
