Adding work logs to the project pages

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -171,6 +171,9 @@
         $.get('/api/logwork/list/last50', obj, function(data) {
           debugger;
         
+          if(data.loggedwork.results.length == 0)
+            reject('Empty');
+          
           resolve(data.loggedwork);
         });
         
