Adding work logs to the project pages

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -157,7 +157,7 @@
       var promise = new Promise(function(resolve, reject) {
         
         $.get('/api/users/list', '', function(data) {
-          debugger;
+          //debugger;
         
           resolve(data.user);
         });
