Adding RPiOVN to the project list on the front end

--- a/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/project.hbs
@@ -92,6 +92,10 @@
       case "59601280a27cfc03d2f7327a":
         targetProj.push("597fafa0a27cfc03d2f7327f");
         
+      //RPi-OVN
+      case "5980c71603af8503e9ae8d60":
+        targetProj.push("5803d486c0725f03c7ee9fed");
+        
       default:
         break;
     }
