Adding licensing info

--- a/plugin/rpiovn-plugin/keystone/templates/views/license.hbs
+++ b/plugin/rpiovn-plugin/keystone/templates/views/license.hbs
@@ -25,14 +25,14 @@
         <h2>Commercial Use:</h2>
         <ul>
           <li>
-            Any products using code or derivitives of code from this repository must register by 
+            Any products or services using code or derivitives of code from this repository must register by 
             contacting Chris Troutner(<a href="mailto:chris.troutner@gmail.com">chris.troutner@gmail.com</a> 
             or <a href="http://rpiovn.org">RPiOVN.org</a>. 
             A simple written notice by email will suffice.
           </li>
           <li>
-            Any products using code or derivities of code from this repository which obtain more than 
-            $10,000 USD in annual gross sales agree to pay a royalty of 2% of those gross sales to the copyright holder.
+            Any products or services using code or derivities of code from this repository, which obtain more than 
+            $10,000 USD in annual gross sales, agree to pay a royalty of 2% of those gross sales to the copyright holder.
           </li>
         </ul>
       </li>
